# philosopher-agent

./: .gitignore  Procfile  README.md  celery_app.py  celeryconfig.py  pyproject.toml  requirements.txt  tasks.py
src/automating_content_creation_for_enhanced_efficiency/: crew.py  main.py
src/automating_content_creation_for_enhanced_efficiency/config/: agents.yaml  tasks.yaml
src/automating_content_creation_for_enhanced_efficiency/tools/: blog_tool.py
src/daily_philosopher/: blog_poster.py  crew.py  mail_sender.py  main.py
src/daily_philosopher/config/: agents.yaml  tasks.yaml
src/daily_philosopher/tools/: blog_tool.py  email_tool.py
